--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 asgiref==3.3.1
 boto3==1.17.22
 botocore==1.20.22
+countries==0.2.0
 dj-database-url==0.5.0
 Django==3.1.7
 django-allauth==0.44.0
+django-countries==7.1
 django-crispy-forms==1.11.2
 django-storages==1.11.1
 gunicorn==20.0.4
